Preparing for search function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <figure class="navbar__site-logo">
                 <img src="./img/site-logo.png" alt="website logo">
             </figure>
-            <form action="" method="get" class="navbar__search-section">
+            <form action="" method="get" class="navbar__search-section" id="searchForm">
                 <input type="search" name="searchValue" class="navbar__search-bar" id="searchValue">
             </form>
             <figure class="navbar__profile-icon">
